Fixed weird gap issue

--- a/sass/schedule.scss
+++ b/sass/schedule.scss
@@ -48,6 +48,6 @@ a:visited{
     text-align: left;
 }
 #headspace{
-    border: solid black 1px;
-    margin-top: 20px;
+    margin-top: 230px;
+    border: solid $body_color 1px; 
 }
